force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/Opportunity_SAP_Integration_Status__c.object-meta.xml
<CustomObject>
    <description>Opp Reg =&gt; SAP integration Status. It captures the status of Opportunity sync to SAP</description>
    <label>Opportunity SAP Integration Status</label>
    <nameField>
        <displayFormat>OPP-SAP-Sync-{00000}</displayFormat>
        <label>Opportunity SAP Integration Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity SAP Integration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>