force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/IsSFDCError__c.field-meta.xml
<CustomField>
    <fullName>IsSFDCError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSFDCError</label>
    <type>Checkbox</type>
</CustomField>