force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/NPN_SP_VAR_AccountId__c.field-meta.xml
<CustomField>
    <fullName>NPN_SP_VAR_AccountId__c</fullName>
    <description>Opportunity - NPN SP/VAR Account Id</description>
    <formula>OpportunityId__r.NPN_Solution_Provider_VAR__c</formula>
    <inlineHelpText>Opportunity - NPN SP/VAR Account Id</inlineHelpText>
    <label>NPN SP VAR AccountId</label>
    <type>Text</type>
</CustomField>