force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/NPN_SP_VAR_SAP__c.field-meta.xml
<CustomField>
    <fullName>NPN_SP_VAR_SAP__c</fullName>
    <description>NPN (Reseller/VAR) - SAP Customer Number</description>
    <formula>OpportunityId__r.NPN_Solution_Provider_VAR__r.SAP_Customer_Number__c</formula>
    <inlineHelpText>NPN (Reseller/VAR) - SAP Customer Number</inlineHelpText>
    <label>NPN-SP/VAR SAP#</label>
    <type>Text</type>
</CustomField>