force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Opportunity Name</description>
    <formula>OpportunityId__r.Name</formula>
    <inlineHelpText>Opportunity Name</inlineHelpText>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>