force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Opportunity O-Number</description>
    <formula>OpportunityId__r.Opportunity_Number__c</formula>
    <inlineHelpText>Opportunity O-Number</inlineHelpText>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>