force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity SAP Integration Status</relationshipLabel>
    <relationshipName>Opportunity_SAP_Integration_Status</relationshipName>
    <type>Lookup</type>
</CustomField>