force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/Partner_Sales_Rep_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Rep_Company_Id__c</fullName>
    <description>Partner Sales Rep Company Id</description>
    <formula>OpportunityId__r.DR_Partner_Sales_Rep_Company__c</formula>
    <inlineHelpText>Partner Sales Rep Company Id</inlineHelpText>
    <label>Partner Sales Rep Company Id</label>
    <type>Text</type>
</CustomField>