force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/Partner_Sales_Rep_Company_SAP__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Rep_Company_SAP__c</fullName>
    <description>Partner Sales Rep Company - SAP Customer#</description>
    <formula>OpportunityId__r.DR_Partner_Sales_Rep_Company__r.SAP_Customer_Number__c</formula>
    <inlineHelpText>Partner Sales Rep Company - SAP Customer#</inlineHelpText>
    <label>Partner Sales Rep Company SAP#</label>
    <type>Text</type>
</CustomField>