force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/PEC_SAP__c.field-meta.xml
<CustomField>
    <fullName>PEC_SAP__c</fullName>
    <description>PEC SAP Customer Number</description>
    <formula>OpportunityId__r.Account.SAP_Customer_Number__c</formula>
    <inlineHelpText>PEC SAP Customer Number</inlineHelpText>
    <label>PEC-SAP#</label>
    <type>Text</type>
</CustomField>