force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Code__c</fullName>
    <label>Return Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>