force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/Return_Message__c.field-meta.xml
<CustomField>
    <fullName>Return_Message__c</fullName>
    <label>Return Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>