force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <label>Return Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>