force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/SDFCExceptionMsg__c.field-meta.xml
<CustomField>
    <fullName>SDFCExceptionMsg__c</fullName>
    <label>SDFCExceptionMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>