force-app/main/default/objects/Opportunity_SAP_Integration_Status__c/fields/SDFCExceptionName__c.field-meta.xml
<CustomField>
    <fullName>SDFCExceptionName__c</fullName>
    <label>SDFCExceptionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>